# InGen

./: .gitignore  README.md
.system/: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  MEMORY.md  PRD.md  ROADMAP.md
client/: CMakeLists.txt
client/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
client/Source/DSP/: PitchDetector.cpp  PitchDetector.h  SampleAnalysisJob.cpp  SampleAnalysisJob.h  TransientDetector.cpp  TransientDetector.h
client/Source/Engine/: SamplerEngine.cpp  SamplerEngine.h  SamplerSoundBase.h  SamplerVoiceA.cpp  SamplerVoiceA.h  SamplerVoiceB.cpp  SamplerVoiceB.h
client/Source/Network/: AudioGeneratorAPI.h  LocalPythonServerClient.h
client/Source/Serialization/: PresetArchiver.cpp  PresetArchiver.h  PresetSerializer.cpp  PresetSerializer.h
client/Source/UI/: GlassmorphicLookAndFeel.cpp  GlassmorphicLookAndFeel.h  WaveformVisualizer.cpp  WaveformVisualizer.h
server/: requirements.txt
server/app/: generator.py  main.py
server/models/: download_woosh.py
